staging/toptool-middleware-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: https
    namespace: toptool
spec:
    redirectScheme:
        scheme: https
        permanent: true
