staging/toptool-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toptool-app
  labels:
    app: toptool
  namespace: toptool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toptool
  template:
    metadata:
      labels:
        app: toptool
    spec:
      volumes:
        - name: shared-mediafiles
          persistentVolumeClaim:
            claimName: toptool-mediafiles-pvc
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - containerPort: 80
              name: mediafiles-srv
          volumeMounts:
            - name: shared-mediafiles
              mountPath: /usr/share/nginx/html/media
        - name: toptool
          image: ghcr.io/fstum/toptool-v3-staging:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: gunicorn
          volumeMounts:
            - name: shared-mediafiles
              mountPath: /code/media
