staging/toptool-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: toptool-svc
    labels:
        app: toptool
spec:
    type: ClusterIP
    selector:
        app: toptool
    ports:
        - name: mediafiles-srv
          port: 7000
          targetPort: 80
        - name: gunicorn
          port: 8000
          targetPort: 8000
