staging/toptool-ingress-http.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: toptool-ingress-https
    labels:
        app: toptool
    namespace: toptool
spec:
    entryPoints:
        - web
    routes:
        - kind: Rule
          match: Host(`top.frank.elsinga.de`)
          services:
              - name: noop@internal
                kind: TraefikService
          middlewares:
              - name: https
