staging/toptool-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: toptool-ingress
    labels:
        app: toptool
    namespace: toptool
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`top.frank.elsinga.de`) && PathPrefix(`/media/`)
          priority: 11
          services:
              - name: toptool-svc
                port: 7000
        - kind: Rule
          match: Host(`top.frank.elsinga.de`)
          priority: 10
          services:
              - name: toptool-svc
                port: 8000
    tls:
        secretName: top.frank.elsinga.de
